# wall-e

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  simple.x
calibration_data/: AXIS151.xml  AXIS151_bigboard.xml  AXIS152.xml  AXIS152_calib.xml  axis151_bigboard_480x360.xml  axis151_lil_480x360_1.xml  axis151_lilboard_480x360  axis151_lilboard_480x360.xml  axis151_lilboard_800x600.xml  axis152_bigboard_480x360.xml  axis152_lilboard_1280x720.xml  axis152_lilboard_480x360.xml  axis152_lilboard_480x360_1.xml  axis152_lilboard_800x600.xml
pointclouds/: pointcloud2.pcd  pointcloud_2.pcd  pointcloud_250apart_facing_in.pcd  pointcloud_together_1280x720.pcd  pointcloud_together_facing_out.pcd  pointcloud_var.PCD
savefiles/: AXIS151_lilboard.xml  AXIS152_lilboard.xml  axis_151_calib_settings_lil.xml  axis_152_calib_settings_lil.xml  axis_cam_calib_lilboard.xml  disp8.pcl  stereo_bigboard.xml  stereo_lilboard.xml
settings/: .disparity_settings.xml.swp  default2.xml  disparity_settings.xml  stereo_default.xml
settings/bigboard/: axis151_calib_480x360.xml  axis152_calib_480x360.xml  axis_cam_calib_bigboard.xml  stereo_bigboard.xml
settings/lilboard/: \  (+3 more)
src/: .calibrate_stereo.cpp.swo  .calibrate_stereo.cpp.swp  .stereo_disparity.cpp.swp  CMakeCache.txt  CMakeFiles.txt  CMakeLists.txt  Makefile  axis_cam_calib.xml  calibrate_stereo.cpp  calibrate_stereo.cpp~  camera_calibration.cpp~  cmake_install.cmake  default.xml  default2.xml  disparity_settings_default.xml  find_intrinsic.cpp  intrinsic  stereo_default.xml  stereo_disparity.cpp
